##################
# v
##################
* Improve {noarchive} tags behavior
* Minor usage improvements
* Download images

##################
# v0.1 2012-04-15
##################
* First release